--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Gezgin Planlayıcı",
   "short_name": "Gezgin",
-  "start_url": "./Gezgin.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#059669",
@@ -18,4 +18,5 @@
       "sizes": "512x512"
     }
   ]
+
 }
